--- a/client/src/components/TaskList/TaskList.module.css
+++ b/client/src/components/TaskList/TaskList.module.css
@@ -1,5 +1,5 @@
 .parent {
-    @apply col-start-2 col-span-6 row-span-4 bg-white rounded-xl shadow-lg ml-8 mr-4 flex flex-col justify-between
+    @apply col-start-2 col-span-6 row-span-4 bg-white rounded-xl shadow-lg ml-8 mr-4 flex flex-col justify-between transition-colors duration-500
 }
 
 .taskheader {
@@ -11,13 +11,21 @@
 }
 
 .taskfooter {
-    @apply flex justify-center items-center h-16 rounded-b-xl font-poppins text-gray-500 
+    @apply flex justify-center items-center h-16 rounded-b-xl font-poppins text-gray-500
 }
 
 .parentDarkM {
-    @apply col-start-2 col-span-6 row-span-4 bg-gray-500 rounded-xl shadow-lg ml-8 mr-4 flex flex-col justify-between
+    @apply col-start-2 col-span-6 row-span-4 bg-gray-700 rounded-xl shadow-lg ml-8 mr-4 flex flex-col justify-between text-white transition-colors duration-500
 }
 
 .taskheaderDarkM {
-    @apply flex justify-center items-center h-16 bg-indigo-700 rounded-t-xl font-poppins text-2xl text-white font-semibold
+    @apply flex justify-center items-center h-16 bg-gray-900 rounded-t-xl font-poppins text-2xl font-semibold
+}
+
+.taskwrapperDarkM {
+    @apply h-full border-b-2 border-b-gray-800
+}
+
+.taskfooterDarkM {
+    @apply flex justify-center items-center h-16 rounded-b-xl font-poppins
 }
